[gd_scene load_steps=22 format=4 uid="uid://df0y4vq1k5h6p"]

[ext_resource type="Script" path="res://scripts/level_editor.gd" id="1_d30mq"]
[ext_resource type="Texture2D" uid="uid://dwyc3v1fqu5e" path="res://gfx/bg/bg01.png" id="2_7a3eo"]
[ext_resource type="TileSet" uid="uid://qpcrhhulvt6u" path="res://res/tiles/basic.tres" id="3_wfdmg"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="4_boc62"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="5_qgkhr"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="6_jlo2h"]
[ext_resource type="Texture2D" uid="uid://ccnyns74fphsp" path="res://gfx/hud/editorIcons.png" id="7_qkmua"]
[ext_resource type="Texture2D" uid="uid://ddgyswd77j8vg" path="res://gfx/hud/editorcontrols.png" id="8_3sjhv"]
[ext_resource type="FontFile" uid="uid://b8jlvkt173fm0" path="res://gfx/font/m3x6.ttf" id="10_4hsp5"]
[ext_resource type="Texture2D" uid="uid://clousqew2n5mh" path="res://gfx/hud/edit.png" id="10_58obf"]
[ext_resource type="Script" path="res://scripts/efx/movehandlers.gd" id="10_fex0h"]
[ext_resource type="Script" path="res://scripts/ui/rctpanel.gd" id="10_fpnf7"]
[ext_resource type="FontVariation" uid="uid://b72mbxc2mmmmd" path="res://res/uifont.tres" id="13_qeek1"]
[ext_resource type="Script" path="res://scripts/ui/grid.gd" id="13_vyehv"]
[ext_resource type="PackedScene" uid="uid://dp02e2s54pvw8" path="res://res/obj/VFX/editor_ui.tscn" id="14_g6k5p"]

[sub_resource type="Resource" id="Resource_dwntm"]
script = ExtResource("6_jlo2h")
duration = 0.5
transition = 1
ease = 2

[sub_resource type="Gradient" id="Gradient_s6typ"]
colors = PackedColorArray(1, 1, 1, 0.376471, 1, 1, 1, 0.376471)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2i6qa"]
gradient = SubResource("Gradient_s6typ")
width = 32
height = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k05j6"]
size = Vector2(32, 32)

[sub_resource type="FontVariation" id="FontVariation_rtsyv"]
base_font = ExtResource("10_4hsp5")

[sub_resource type="FontVariation" id="FontVariation_dxk4u"]
base_font = ExtResource("10_4hsp5")
spacing_top = -6

[node name="LevelEdit" type="Node2D"]
script = ExtResource("1_d30mq")

[node name="Parallax2D" type="Parallax2D" parent="."]
z_index = -512
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(128, 128)
autoscroll = Vector2(0, 50)
repeat_times = 20

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture_repeat = 2
texture = ExtResource("2_7a3eo")
centered = false
region_rect = Rect2(0, 0, 10000, 10000)

[node name="GridParallax" type="Parallax2D" parent="."]
modulate = Color(1, 1, 1, 0)
repeat_size = Vector2(768, 768)

[node name="Grid" type="Node2D" parent="GridParallax"]
z_index = 4096
position = Vector2(-64, -64)
script = ExtResource("13_vyehv")

[node name="Backerground" type="TileMapLayer" parent="."]
z_index = 100
position = Vector2(-1, 0)
tile_set = ExtResource("3_wfdmg")
rendering_quadrant_size = 32

[node name="EntityViewer4" type="Node2D" parent="Backerground"]
show_behind_parent = true
position = Vector2(1, 0)

[node name="Background" type="TileMapLayer" parent="."]
z_index = 100
position = Vector2(-1, 0)
tile_set = ExtResource("3_wfdmg")
rendering_quadrant_size = 32

[node name="EntityViewer5" type="Node2D" parent="Background"]
show_behind_parent = true
position = Vector2(1, 0)

[node name="Foreground" type="TileMapLayer" parent="."]
z_index = 100
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AAAAAAkAAwAIAAAAAAABAAkAAwAKAAAAAAACAAkAAwAKAAAAAAADAAkAAwAKAAAAAAAEAAkAAwAKAAAAAAAFAAkAAwAKAAAAAAAGAAkAAwAKAAAAAAAHAAkAAwAKAAAAAAAIAAkAAwAKAAAAAAAJAAkAAwAKAAAAAAAKAAkAAwAKAAAAAAALAAkAAwAKAAAAAAAMAAkAAwAKAAAAAAANAAkAAwAKAAAAAAAOAAkAAwAKAAAAAAAPAAkAAwAKAAAAAAAQAAkAAwAKAAAAAAARAAkAAwAKAAAAAAASAAkAAwAKAAAAAAATAAkAAwAKAAAAAAATAAoAAwAJAAIAAAASAAoAAwAJAAIAAAARAAoAAwAJAAIAAAAQAAoAAwAJAAIAAAAPAAoAAwAJAAIAAAAOAAoAAwAJAAIAAAANAAoAAwAJAAIAAAAMAAoAAwAJAAIAAAALAAoAAwAJAAIAAAAKAAoAAwAJAAIAAAAJAAoAAwAJAAIAAAAIAAoAAwAJAAIAAAAHAAoAAwAJAAIAAAAGAAoAAwAJAAIAAAAFAAoAAwAJAAIAAAAEAAoAAwAJAAIAAAADAAoAAwAJAAIAAAACAAoAAwAJAAIAAAABAAoAAwAJAAIAAAAAAAoAAwAIAAEAAAAAAAsAAwAIAAMAAAABAAsAAwAJAAMAAAACAAsAAwAJAAMAAAADAAsAAwAJAAMAAAAEAAsAAwAJAAMAAAAFAAsAAwAJAAMAAAAGAAsAAwAJAAMAAAAHAAsAAwAJAAMAAAAIAAsAAwAJAAMAAAAJAAsAAwAJAAMAAAAKAAsAAwAJAAMAAAALAAsAAwAJAAMAAAAMAAsAAwAJAAMAAAANAAsAAwAJAAMAAAAOAAsAAwAJAAMAAAAPAAsAAwAJAAMAAAAQAAsAAwAJAAMAAAARAAsAAwAJAAMAAAASAAsAAwAJAAMAAAATAAsAAwAJAAMAAAADAAIAAwAAAAEAAAADAAMAAwABAAEAAAADAAQAAwAAAAEAAAADAAUAAwAAAAIAAAAFAAIAAwAAAAEAAAAFAAMAAwADAAEAAAAFAAQAAwAAAAEAAAAFAAUAAwAAAAIAAAAEAAMAAwACAAMAAAAHAAMAAwABAAEAAAAHAAIAAwAAAAEAAAAHAAQAAwAAAAEAAAAHAAUAAwABAAIAAAAIAAUAAwACAAMAAAAJAAUAAwADAAMAAAADAAEAAwAAAAAAAAAFAAEAAwAAAAAAAAAIAAEAAwACAAMAAAAJAAEAAwADAAMAAAAHAAEAAwABAAAAAAAIAAMAAwACAAMAAAAJAAMAAwADAAMAAAALAAEAAwAAAAAAAAALAAIAAwAAAAEAAAALAAMAAwAAAAEAAAALAAQAAwAAAAEAAAALAAUAAwABAAIAAAAMAAUAAwACAAMAAAANAAUAAwADAAMAAAAPAAEAAwAAAAAAAAAPAAIAAwAAAAEAAAAPAAMAAwAAAAEAAAAPAAQAAwAAAAEAAAAPAAUAAwABAAIAAAAQAAUAAwACAAMAAAARAAUAAwADAAMAAAATAAIAAwAAAAEAAAATAAEAAwABAAAAAAAUAAEAAwACAAMAAAAVAAEAAwADAAAAAAAVAAIAAwAAAAEAAAAVAAMAAwAAAAEAAAAVAAQAAwAAAAEAAAAVAAUAAwADAAIAAAAUAAUAAwACAAMAAAATAAUAAwABAAIAAAATAAQAAwAAAAEAAAATAAMAAwAAAAEAAAAUAAkAAwAKAAAAAAAVAAkAAwAKAAAAAAAWAAkAAwAKAAAAAAAXAAkAAwAKAAAAAAAXAAoAAwAJAAIAAAAXAAsAAwAJAAMAAAAWAAsAAwAJAAMAAAAVAAsAAwAJAAMAAAAUAAsAAwAJAAMAAAAUAAoAAwAJAAIAAAAVAAoAAwAJAAIAAAAWAAoAAwAJAAIAAAAXAAUAAwAAAAAAAAAXAAYAAwAAAAIAAAAbAAEAAwAAAAAAAAAbAAIAAwAAAAEAAAAbAAMAAwAAAAEAAAAbAAQAAwAAAAIAAAAdAAMAAwAAAAEAAAAdAAQAAwAAAAIAAAAcAAUAAwAAAAMAAAAeAAUAAwAAAAMAAAAfAAQAAwAAAAIAAAAfAAMAAwAAAAEAAAAfAAIAAwAAAAEAAAAfAAEAAwAAAAAAAAAdAAIAAwAAAAAAAAAhAAEAAwABAAAAAAAhAAIAAwAAAAEAAAAhAAMAAwAAAAEAAAAhAAQAAwAAAAEAAAAhAAUAAwABAAIAAAAiAAEAAwACAAMAAAAjAAEAAwADAAAAAAAjAAIAAwAAAAEAAAAjAAMAAwAAAAEAAAAjAAQAAwAAAAEAAAAjAAUAAwADAAIAAAAiAAUAAwACAAMAAAAlAAEAAwABAAAAAAAlAAIAAwAAAAEAAAAlAAMAAwABAAEAAAAlAAQAAwAAAAEAAAAlAAUAAwAAAAIAAAAmAAEAAwACAAMAAAAnAAEAAwADAAAAAAAnAAIAAwAAAAIAAAAmAAMAAwADAAMAAAAnAAQAAwAAAAAAAAAnAAUAAwAAAAIAAAApAAEAAwAAAAAAAAApAAIAAwAAAAEAAAApAAMAAwAAAAEAAAApAAQAAwAAAAEAAAApAAUAAwABAAIAAAAqAAUAAwACAAMAAAArAAUAAwADAAMAAAAtAAEAAwABAAAAAAAtAAIAAwAAAAEAAAAtAAMAAwAAAAEAAAAtAAQAAwAAAAEAAAAtAAUAAwABAAIAAAAuAAEAAwADAAMAAAAvAAIAAwAAAAAAAAAvAAMAAwAAAAEAAAAvAAQAAwAAAAIAAAAuAAUAAwADAAMAAAAxAAEAAwAAAAAAAAAxAAIAAwAAAAEAAAAxAAMAAwAAAAIAAAAxAAUAAwAAAAMAAAAYAAkAAwAKAAAAAAAZAAkAAwAKAAAAAAAaAAkAAwAKAAAAAAAbAAkAAwAKAAAAAAAcAAkAAwAKAAAAAAAdAAkAAwAKAAAAAAAeAAkAAwAKAAAAAAAfAAkAAwAKAAAAAAAgAAkAAwAKAAAAAAAhAAkAAwAKAAAAAAAiAAkAAwAKAAAAAAAjAAkAAwAKAAAAAAAkAAkAAwAKAAAAAAAlAAkAAwAKAAAAAAAmAAkAAwAKAAAAAAAnAAkAAwAKAAAAAAAoAAkAAwAKAAAAAAApAAkAAwAKAAAAAAAqAAkAAwAKAAAAAAArAAkAAwAKAAAAAAAsAAkAAwAKAAAAAAAtAAkAAwAKAAAAAAAuAAkAAwAKAAAAAAAvAAkAAwAKAAAAAAAwAAkAAwAKAAAAAAAxAAkAAwAKAAAAAAAyAAkAAwAKAAAAAAAzAAkAAwAKAAAAAAA0AAkAAwALAAAAAAA0AAoAAwALAAIAAAAzAAoAAwAJAAIAAAAyAAoAAwAJAAIAAAAxAAoAAwAJAAIAAAAwAAoAAwAJAAIAAAAvAAoAAwAJAAIAAAAuAAoAAwAJAAIAAAAtAAoAAwAJAAIAAAAsAAoAAwAJAAIAAAArAAsAAwAJAAMAAAAqAAsAAwAJAAMAAAApAAsAAwAJAAMAAAAoAAsAAwAJAAMAAAAnAAsAAwAJAAMAAAAmAAsAAwAJAAMAAAAlAAsAAwAJAAMAAAAkAAsAAwAJAAMAAAAjAAsAAwAJAAMAAAAiAAsAAwAJAAMAAAAhAAsAAwAJAAMAAAAgAAsAAwAJAAMAAAAfAAsAAwAJAAMAAAAeAAsAAwAJAAMAAAAeAAoAAwAJAAIAAAAdAAoAAwAJAAIAAAAcAAoAAwAJAAIAAAAbAAoAAwAJAAIAAAAaAAoAAwAJAAIAAAAZAAoAAwAJAAIAAAAYAAoAAwAJAAIAAAAYAAsAAwAJAAMAAAAZAAsAAwAJAAMAAAAaAAsAAwAJAAMAAAAbAAsAAwAJAAMAAAAcAAsAAwAJAAMAAAAdAAsAAwAJAAMAAAAfAAoAAwAJAAIAAAAgAAoAAwAJAAIAAAAhAAoAAwAJAAIAAAAiAAoAAwAJAAIAAAAjAAoAAwAJAAIAAAAkAAoAAwAJAAIAAAAlAAoAAwAJAAIAAAAmAAoAAwAJAAIAAAAnAAoAAwAJAAIAAAAoAAoAAwAJAAIAAAApAAoAAwAJAAIAAAAqAAoAAwAJAAIAAAArAAoAAwAJAAIAAAA0AAsAAwALAAMAAAAzAAsAAwAJAAMAAAAyAAsAAwAJAAMAAAAxAAsAAwAJAAMAAAAwAAsAAwAJAAMAAAAvAAsAAwAJAAMAAAAuAAsAAwAJAAMAAAAtAAsAAwAJAAMAAAAsAAsAAwAJAAMAAAA=")
tile_set = ExtResource("3_wfdmg")
rendering_quadrant_size = 32

[node name="EntityViewer" type="Node2D" parent="Foreground"]
show_behind_parent = true
z_as_relative = false
position = Vector2(1, 0)

[node name="Forererground" type="TileMapLayer" parent="."]
z_index = 100
position = Vector2(-1, 0)
tile_set = ExtResource("3_wfdmg")
rendering_quadrant_size = 32

[node name="EntityViewer2" type="Node2D" parent="Forererground"]
position = Vector2(1, 0)

[node name="Forerererground" type="TileMapLayer" parent="."]
z_index = 100
position = Vector2(-1, 0)
tile_set = ExtResource("3_wfdmg")
rendering_quadrant_size = 32

[node name="EntityViewer3" type="Node2D" parent="Forerererground"]
position = Vector2(1, 0)

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(320, 460)
ignore_rotation = false
limit_left = -1
limit_top = 32
limit_right = 1695
limit_bottom = 384
drag_top_margin = 0.75

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("4_boc62")

[node name="PhantomCamera2D" type="Node2D" parent="."]
position = Vector2(320, 460)
script = ExtResource("5_qgkhr")
priority = 1
follow_mode = 2
tween_resource = SubResource("Resource_dwntm")
tween_on_load = false
follow_damping = true
follow_damping_value = Vector2(0.25, 0.4)
limit_target = NodePath("../Foreground")

[node name="EditCam" type="Node2D" parent="."]

[node name="PhantomCamera2D" type="Node2D" parent="EditCam" node_paths=PackedStringArray("follow_target")]
script = ExtResource("5_qgkhr")
follow_mode = 1
follow_target = NodePath("../EditTarget")
tween_resource = SubResource("Resource_dwntm")
tween_on_load = false
follow_damping_value = Vector2(0.25, 0.4)

[node name="EditTarget" type="Node2D" parent="EditCam"]

[node name="Cursor" type="Sprite2D" parent="EditCam"]
z_index = 3972
texture = SubResource("GradientTexture2D_2i6qa")
centered = false

[node name="Item" type="Sprite2D" parent="EditCam/Cursor"]
z_index = 3970
z_as_relative = false
texture = ExtResource("7_qkmua")
centered = false
hframes = 13
vframes = 4

[node name="Area2D" type="Area2D" parent="EditCam/Cursor"]
visible = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditCam/Cursor/Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_k05j6")

[node name="EntitiesPlaced" type="Node2D" parent="."]

[node name="Controls" type="CanvasLayer" parent="."]
offset = Vector2(0, 256)
transform = Transform2D(1, 0, 0, 1, 0, 256)

[node name="Sprite2D" type="Sprite2D" parent="Controls"]
modulate = Color(1, 1, 1, 0.501961)
texture = ExtResource("8_3sjhv")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Movers" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="Control" parent="CanvasLayer/Movers" node_paths=PackedStringArray("editor")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
mouse_filter = 1
script = ExtResource("10_fex0h")
dir = Vector2(0, -1)
editor = NodePath("../../..")

[node name="Bottom" type="Control" parent="CanvasLayer/Movers" node_paths=PackedStringArray("editor")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
script = ExtResource("10_fex0h")
dir = Vector2(0, 1)
editor = NodePath("../../..")

[node name="Left" type="Control" parent="CanvasLayer/Movers" node_paths=PackedStringArray("editor")]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 16.0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("10_fex0h")
dir = Vector2(-1, 0)
editor = NodePath("../../..")

[node name="Right" type="Control" parent="CanvasLayer/Movers" node_paths=PackedStringArray("editor")]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("10_fex0h")
dir = Vector2(1, 0)
editor = NodePath("../../..")

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 76.0
offset_right = 152.0
offset_bottom = 140.0
script = ExtResource("10_fpnf7")
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 12.0

[node name="Button" type="Button" parent="CanvasLayer/Panel/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -12.0
offset_bottom = 12.0
grow_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_rtsyv")
clip_text = true

[node name="Label" type="RichTextLabel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("10_4hsp5")
bbcode_enabled = true
text = "[center]Level Properties[/center]"
scroll_active = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 36.0
offset_right = -8.0
offset_bottom = 37.0
grow_horizontal = 2

[node name="SaveButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 44.0
offset_bottom = 55.0
theme_override_fonts/font = SubResource("FontVariation_dxk4u")
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 40.0
offset_right = 86.0
offset_bottom = 55.0
theme_override_fonts/font = SubResource("FontVariation_dxk4u")
text = "Load"

[node name="ClearAll" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 92.0
offset_top = 40.0
offset_right = 134.0
offset_bottom = 55.0
theme_override_fonts/font = SubResource("FontVariation_dxk4u")
text = "Clear All"

[node name="Panel2" type="Panel" parent="CanvasLayer/Panel/ClearAll"]
modulate = Color(100, 100, 100, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Coordinates" type="Label" parent="CanvasLayer"]
offset_left = 4.0
offset_right = 80.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("10_4hsp5")
theme_override_font_sizes/font_size = 16
text = "(69, 420) [69, 420]"

[node name="Level Status" type="Label" parent="CanvasLayer/Coordinates"]
layout_mode = 1
offset_top = 12.0
offset_right = 96.0
offset_bottom = 35.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("10_4hsp5")
theme_override_font_sizes/font_size = 16
text = "Level loaded!"

[node name="TilePanel" type="Panel" parent="CanvasLayer"]
visible = false
offset_right = 164.0
offset_bottom = 68.0
script = ExtResource("10_fpnf7")

[node name="Panel" type="Panel" parent="CanvasLayer/TilePanel"]
layout_mode = 0
offset_right = 164.0
offset_bottom = 12.0

[node name="Button" type="Button" parent="CanvasLayer/TilePanel/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -12.0
offset_bottom = 12.0
grow_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_rtsyv")
clip_text = true

[node name="Label" type="Label" parent="CanvasLayer/TilePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("10_4hsp5")
text = "ided:"

[node name="IDEdInput" type="LineEdit" parent="CanvasLayer/TilePanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 16.0
offset_right = 156.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("13_qeek1")

[node name="Label3" type="Label" parent="CanvasLayer/TilePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 24.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("10_4hsp5")
text = "ref:"

[node name="RefInput" type="LineEdit" parent="CanvasLayer/TilePanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 48.0
offset_right = 156.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("13_qeek1")

[node name="Label2" type="Label" parent="CanvasLayer/TilePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 24.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("10_4hsp5")
text = "sprite:"

[node name="SpriteInput" type="LineEdit" parent="CanvasLayer/TilePanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 32.0
offset_right = 156.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("13_qeek1")

[node name="LayerNumber" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_right = -4.0
offset_bottom = 32.0
grow_horizontal = 0
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("10_4hsp5")
bbcode_enabled = true
text = "[right]Layer 0[/right]"

[node name="EditorUI" parent="." instance=ExtResource("14_g6k5p")]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer2"]
visible = false
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(572, 48)
texture = ExtResource("10_58obf")
centered = false

[node name="UndoInfo" type="Node" parent="."]

[connection signal="gui_input" from="CanvasLayer/Movers/Top" to="CanvasLayer/Movers" method="_on_top_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Movers/Bottom" to="CanvasLayer/Movers" method="_on_bottom_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Movers/Left" to="CanvasLayer/Movers" method="_on_left_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Movers/Right" to="CanvasLayer/Movers" method="_on_right_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Panel/Panel" to="CanvasLayer/Panel" method="_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Panel/Panel" to="CanvasLayer/Panel" method="_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Panel/Panel/Button" to="CanvasLayer/Panel" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/SaveButton" to="." method="save_level"]
[connection signal="pressed" from="CanvasLayer/Panel/LoadButton" to="." method="load_level"]
[connection signal="button_down" from="CanvasLayer/Panel/ClearAll" to="." method="confirm_clear"]
[connection signal="button_up" from="CanvasLayer/Panel/ClearAll" to="." method="confirm_nope"]
[connection signal="mouse_entered" from="CanvasLayer/TilePanel/Panel" to="CanvasLayer/TilePanel" method="_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TilePanel/Panel" to="CanvasLayer/TilePanel" method="_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TilePanel/Panel/Button" to="CanvasLayer/TilePanel" method="_on_button_pressed"]
[connection signal="text_changed" from="CanvasLayer/TilePanel/IDEdInput" to="." method="_on_id_ed_input_text_changed"]
[connection signal="text_changed" from="CanvasLayer/TilePanel/RefInput" to="." method="_on_ref_input_text_changed"]
[connection signal="text_changed" from="CanvasLayer/TilePanel/SpriteInput" to="." method="_on_sprite_input_text_changed"]
